  breaks almost all of pip's other features in subtle and hard to diagnose
  ways.

* Added Appveyor CI

* Uninstall existing packages when performing an editable installation of
  the same packages (:issue:`1548`).

* Pip show is less verbose by default. `--verbose` prints multiline fields

* Added optional column formatting to ``pip list`` (:issue:`3651`).

* Fix the build on systems with symlinked /tmp directory for custom
  builds such as numpy.

* Fix regression in pip freeze: when there is more than one git remote,
  priority is given to the remote named origin (:issue:`3616`)

* Implementation of pep-503 ``data-requires-python``. When this field is
  present for a release link, pip will ignore the download when
  installing to a Python version that doesn't satisfy the requirement.

* Pip wheel now works on editable packages too (it was only working on
  editable dependencies before); this allows running pip wheel on the result
  of pip freeze in presence of editable requirements (:issue:`3291`)

* Add --platform, --python-version, --implementation and --abi parameters to
  ``pip download``. These allow utilities and advanced users to gather
  distributions for interpreters other than the one pip is being run on.
  (:pull:`3760`)

* Skip scanning virtual environments even when venv/bin/python is a dangling
  symlink.


**8.1.2 (2016-05-10)**

* Fix a regression on systems with uninitialized locale (:issue:`3575`).

* Use environment markers to filter packages before determining if a
  required wheel is supported. Solves (:issue:`3254`).

* Make glibc parsing for `manylinux1` support more robust for the variety of
  glibc versions found in the wild (:issue:`3588`).

* Update environment marker support to fully support PEP 508 and legacy
  environment markers (:issue:`3624`).

* Always use debug logging to the ``--log`` file (:issue:`3351`).

* Don't attempt to wrap search results for extremely narrow terminal windows
  (:issue:`3655`).


**8.1.1 (2016-03-17)**